--- a/index.html
+++ b/index.html
@@ -57,11 +57,10 @@
         <div class="projetos-caixa">
 
             <div class="projetos-card">
-                <img src="img/projeto1.png" alt="projeto 1" class="projetos-imagem">
+                <img src="img/594275.jpg" alt="projeto 1" class="projetos-imagem">
                 <div class="caixa-textos-projetos">
-                    <h3 class="info-projetos">lojas de carros</h3>
-                    <p class="paragrafo-projetos">loja virtual moderna com animação suaves e design responsivo para uma
-                        loja de carros de luxo.</p>
+                    <h3 class="info-projetos">página do Spotify</h3>
+                    <p class="paragrafo-projetos">uma pagina incial com layout do Spotify</p>
                 </div>
             </div>
 
